@@ -1,6 +1,7 @@
 package com.ebsolutions.dal.daos;
 
 import com.ebsolutions.config.DatabaseConstants;
+import com.ebsolutions.dal.SortKeyType;
 import com.ebsolutions.dal.dtos.LocationDto;
 import com.ebsolutions.dal.utils.KeyBuilder;
 import com.ebsolutions.exceptions.DataProcessingException;
@@ -14,7 +15,6 @@ import software.amazon.awssdk.enhanced.dynamodb.DynamoDbEnhancedClient;
 import software.amazon.awssdk.enhanced.dynamodb.DynamoDbTable;
 import software.amazon.awssdk.enhanced.dynamodb.Key;
 import software.amazon.awssdk.enhanced.dynamodb.TableSchema;
-import software.amazon.awssdk.services.dynamodb.model.DynamoDbException;
 
 import java.text.MessageFormat;
 import java.time.LocalDateTime;
@@ -26,7 +26,7 @@ import static software.amazon.awssdk.enhanced.dynamodb.model.QueryConditional.so
 @Slf4j
 @Prototype
 public class LocationDao {
-    private DynamoDbTable<LocationDto> ddbTable;
+    private final DynamoDbTable<LocationDto> ddbTable;
 
     public LocationDao(DynamoDbEnhancedClient enhancedClient) {
         this.ddbTable = enhancedClient.table(DatabaseConstants.DATABASE_TABLE_NAME, TableSchema.fromBean(LocationDto.class));
@@ -35,7 +35,7 @@ public class LocationDao {
     public Location read(String clientId, String locationId) {
         MetricsStopWatch metricsStopWatch = new MetricsStopWatch();
         try {
-            Key key = KeyBuilder.build(clientId, DatabaseConstants.LOCATION_SORT_KEY, locationId);
+            Key key = KeyBuilder.build(clientId, SortKeyType.LOCATION, locationId);
 
             LocationDto locationDto = ddbTable.getItem(key);
 
@@ -43,17 +43,14 @@ public class LocationDao {
                     ? null
                     : Location.builder()
                     .clientId(locationDto.getPartitionKey())
-                    .locationId(StringUtils.remove(locationDto.getSortKey(), DatabaseConstants.LOCATION_SORT_KEY))
+                    .locationId(StringUtils.remove(locationDto.getSortKey(), SortKeyType.LOCATION.name()))
                     .name(locationDto.getName())
                     .createdOn(locationDto.getCreatedOn())
                     .lastUpdatedOn(locationDto.getLastUpdatedOn())
                     .build();
-        } catch (DynamoDbException dbe) {
-            log.error("ERROR::{}", this.getClass().getName(), dbe);
-            throw new DataProcessingException("Error in {}".formatted(this.getClass().getName()), dbe);
         } catch (Exception e) {
             log.error("ERROR::{}", this.getClass().getName(), e);
-            throw new DataProcessingException("Error in {}".formatted(this.getClass().getName()), e);
+            throw new DataProcessingException(MessageFormat.format("Error in {0}", this.getClass().getName()), e);
         } finally {
             metricsStopWatch.logElapsedTime(MessageFormat.format("{0}::{1}", this.getClass().getName(), "read"));
         }
@@ -65,29 +62,26 @@ public class LocationDao {
             List<LocationDto> locationDtos = ddbTable
                     .query(r -> r.queryConditional(
                             sortBeginsWith(s
-                                    -> s.partitionValue(clientId).sortValue(DatabaseConstants.LOCATION_SORT_KEY).build()))
+                                    -> s.partitionValue(clientId).sortValue(SortKeyType.LOCATION.name()).build()))
                     )
                     .items()
                     .stream()
-                    .collect(Collectors.toList());
+                    .toList();
 
             return locationDtos.stream()
                     .map(locationDto ->
                             Location.builder()
                                     .clientId(locationDto.getPartitionKey())
-                                    .locationId(StringUtils.remove(locationDto.getSortKey(), DatabaseConstants.LOCATION_SORT_KEY))
+                                    .locationId(StringUtils.remove(locationDto.getSortKey(), SortKeyType.LOCATION.name()))
                                     .name(locationDto.getName())
                                     .createdOn(locationDto.getCreatedOn())
                                     .lastUpdatedOn(locationDto.getLastUpdatedOn())
                                     .build()
                     ).collect(Collectors.toList());
 
-        } catch (DynamoDbException dbe) {
-            log.error("ERROR::{}", this.getClass().getName(), dbe);
-            throw new DataProcessingException("Error in {}".formatted(this.getClass().getName()), dbe);
         } catch (Exception e) {
             log.error("ERROR::{}", this.getClass().getName(), e);
-            throw new DataProcessingException("Error in {}".formatted(this.getClass().getName()), e);
+            throw new DataProcessingException(MessageFormat.format("Error in {0}", this.getClass().getName()), e);
         } finally {
             metricsStopWatch.logElapsedTime(MessageFormat.format("{0}::{1}", this.getClass().getName(), "readAll"));
         }
@@ -96,16 +90,13 @@ public class LocationDao {
     public void delete(String clientId, String locationId) {
         MetricsStopWatch metricsStopWatch = new MetricsStopWatch();
         try {
-            Key key = KeyBuilder.build(clientId, DatabaseConstants.LOCATION_SORT_KEY, locationId);
+            Key key = KeyBuilder.build(clientId, SortKeyType.LOCATION, locationId);
 
             ddbTable.deleteItem(key);
 
-        } catch (DynamoDbException dbe) {
-            log.error("ERROR::{}", this.getClass().getName(), dbe);
-            throw new DataProcessingException("Error in {}".formatted(this.getClass().getName()), dbe);
         } catch (Exception e) {
             log.error("ERROR::{}", this.getClass().getName(), e);
-            throw new DataProcessingException("Error in {}".formatted(this.getClass().getName()), e);
+            throw new DataProcessingException(MessageFormat.format("Error in {0}", this.getClass().getName()), e);
         } finally {
             metricsStopWatch.logElapsedTime(MessageFormat.format("{0}::{1}", this.getClass().getName(), "delete"));
         }
@@ -117,7 +108,7 @@ public class LocationDao {
             LocalDateTime now = LocalDateTime.now();
             LocationDto locationDto = LocationDto.builder()
                     .partitionKey(location.getClientId())
-                    .sortKey(DatabaseConstants.LOCATION_SORT_KEY + UniqueIdGenerator.generate())
+                    .sortKey(SortKeyType.LOCATION.name() + UniqueIdGenerator.generate())
                     .name(location.getName())
                     .createdOn(now)
                     .lastUpdatedOn(now)
@@ -127,17 +118,14 @@ public class LocationDao {
 
             return Location.builder()
                     .clientId(locationDto.getPartitionKey())
-                    .locationId(StringUtils.remove(locationDto.getSortKey(), DatabaseConstants.LOCATION_SORT_KEY))
+                    .locationId(StringUtils.remove(locationDto.getSortKey(), SortKeyType.LOCATION.name()))
                     .name(locationDto.getName())
                     .createdOn(locationDto.getCreatedOn())
                     .lastUpdatedOn(locationDto.getLastUpdatedOn())
                     .build();
-        } catch (DynamoDbException dbe) {
-            log.error("ERROR::{}", this.getClass().getName(), dbe);
-            throw new DataProcessingException("Error in {}".formatted(this.getClass().getName()), dbe);
         } catch (Exception e) {
             log.error("ERROR::{}", this.getClass().getName(), e);
-            throw new DataProcessingException("Error in {}".formatted(this.getClass().getName()), e);
+            throw new DataProcessingException(MessageFormat.format("Error in {0}", this.getClass().getName()), e);
         } finally {
             metricsStopWatch.logElapsedTime(MessageFormat.format("{0}::{1}", this.getClass().getName(), "create"));
         }
@@ -148,12 +136,12 @@ public class LocationDao {
      *
      * @param location the object to replace the current database object
      */
-    public void update(Location location) {
+    public Location update(Location location) {
         MetricsStopWatch metricsStopWatch = new MetricsStopWatch();
         try {
             LocationDto locationDto = LocationDto.builder()
                     .partitionKey(location.getClientId())
-                    .sortKey(DatabaseConstants.LOCATION_SORT_KEY + location.getLocationId())
+                    .sortKey(SortKeyType.LOCATION.name() + location.getLocationId())
                     .name(location.getName())
                     .createdOn(location.getCreatedOn())
                     .lastUpdatedOn(LocalDateTime.now())
@@ -161,12 +149,16 @@ public class LocationDao {
 
             ddbTable.putItem(locationDto);
 
-        } catch (DynamoDbException dbe) {
-            log.error("ERROR::{}", this.getClass().getName(), dbe);
-            throw new DataProcessingException("Error in {}".formatted(this.getClass().getName()), dbe);
+            return Location.builder()
+                    .clientId(locationDto.getPartitionKey())
+                    .locationId(StringUtils.remove(locationDto.getSortKey(), SortKeyType.LOCATION.name()))
+                    .name(locationDto.getName())
+                    .createdOn(locationDto.getCreatedOn())
+                    .lastUpdatedOn(locationDto.getLastUpdatedOn())
+                    .build();
         } catch (Exception e) {
             log.error("ERROR::{}", this.getClass().getName(), e);
-            throw new DataProcessingException("Error in {}".formatted(this.getClass().getName()), e);
+            throw new DataProcessingException(MessageFormat.format("Error in {0}", this.getClass().getName()), e);
         } finally {
             metricsStopWatch.logElapsedTime(MessageFormat.format("{0}::{1}", this.getClass().getName(), "update"));
         }
